crates/biome_html_parser/tests/html_specs/error/svelte/const_missing_expression.svelte
{#each ["1", "2", "3"] as val}
	{@const }
{/each}
